chore: Add Vercel config and improve SEO for petboxbrasilia.com.br

--- a/index.html
+++ b/index.html
@@ -4,8 +4,25 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Pet Box - Felicidade Entregue</title>
-  <meta name="description" content="Box de assinatura personalizada para seu pet." />
+  <title>Pet Box Brasília - Felicidade Entregue Todo Mês</title>
+  <meta name="description" content="Box de assinatura personalizada para seu pet em Brasília. Brinquedos, petiscos e acessórios selecionados todo mês. Frete grátis!" />
+  
+  <!-- SEO -->
+  <link rel="canonical" href="https://petboxbrasilia.com.br" />
+  <meta name="robots" content="index, follow" />
+  
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://petboxbrasilia.com.br" />
+  <meta property="og:title" content="Pet Box Brasília - Felicidade Entregue Todo Mês" />
+  <meta property="og:description" content="Box de assinatura personalizada para seu pet. Brinquedos, petiscos e acessórios selecionados todo mês." />
+  <meta property="og:image" content="https://petboxbrasilia.com.br/og-image.png" />
+  
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Pet Box Brasília - Felicidade Entregue Todo Mês" />
+  <meta name="twitter:description" content="Box de assinatura personalizada para seu pet. Brinquedos, petiscos e acessórios selecionados todo mês." />
+
 
   <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
